--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class": "^0.1.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "class-validator-mongo-object-id": "^1.3.0",
     "mongoose": "^6.7.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
